# yuki

./: .env.example
backend/: Cargo.toml
backend/api/: Cargo.toml
backend/api/src/: main.rs
backend/api/src/middlewares/: auth.rs
backend/api/src/models/: claims.rs  error.rs  user.rs
backend/api/src/repositories/: user.rs
backend/api/src/routes/: chat.rs  user.rs
backend/bff/: Cargo.toml
backend/bff/src/: main.rs
backend/src/: main.rs
backend/src/models/: error.rs  user.rs
backend/src/repositories/: mod.rs  user.rs
backend/src/routes/: user.rs
backend/src/utils/: serde.rs  user.rs
frontend/: package.json
frontend/src/: App.css  App.js  index.css  index.js
frontend/src/features/auth/: Auth.js  Auth.module.css  Login.jsx  SignUp.jsx  state.js
frontend/src/features/content/: Content.jsx  state.js
