[package]
name = "yuki"
version = "0.1.0"
edition = "2018"

[dependencies]
# Actix
actix-web = "4.0.0-beta.9"

# Mongo
mongodb = "2.0.0"
bson = "2.0.0"

# Serde
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Env
dotenv = "0.15.0"

# Logging
env_logger = "0.9.0"

# Crypto
rust-argon2 = "0.8.3"
rand = "0.8.4"