[package]
name = "yuki-api"
version = "0.1.0"
edition = "2021"

[dependencies]
# Actix
actix-web = "4.0.0-beta.10"
tokio = { version = "1.12.0", features = ["full"] }

# Mongo
mongodb = "2.0.0"
bson = "2.0.0"

# Serde
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Env
dotenv = "0.15.0"

# Logging
env_logger = "0.9.0"
log = "0.4.14"

# Crypto
rust-argon2 = "0.8.3"
rand = "0.8.4"
jsonwebtoken = "7.2.0"

# Time
chrono = "0.4.19"

# Utils
thiserror = "1.0.30"
